--- a/src/styles.css
+++ b/src/styles.css
@@ -15,21 +15,27 @@ p1 {
 
 body {
     background-color: white;
-    margin-left: 60px;
-    margin-right: 60px;
+    margin-left: 120px;
+    margin-right: 120px;
 }
 
-.container {
+.calculation_container {
+    display: flex;
+    gap: 20px;
+}
+
+.input_container {
+    flex: 2;
     background-color: #EEF5FF;
     border-radius: 12px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     margin-top: 40px;
     margin-bottom: 40px;
     padding: 10px 30px;
-    width: 300px;
+    /* width: 300px; */
 }
 
-.container h2 {
+.input_container h2 {
     margin-bottom: 30px;
     text-align: start;
 }
@@ -70,4 +76,13 @@ body {
     background-color: #4942E4;
     color: rgb(234, 234, 234);
     border: #4942E4;
+}
+
+.output_container {
+    flex: 5;
+    border-radius: 12px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    margin-top: 40px;
+    margin-bottom: 40px;
+    padding: 10px 30px;
 }
