--- a/backend/calculator/static/calculator/mainStyles.css
+++ b/backend/calculator/static/calculator/mainStyles.css
@@ -51,14 +51,14 @@ body {
     margin-bottom: 8px;
 }
 
-.form-group input[type="number"] {
+.form-group input[type="number"]{
     width: 95%;
     padding: 8px;
     border: 1px solid #ccc;
     border-radius: 4px;
 }
 
-.form-group button[type="button"] {
+.form-group input[type="submit"] {
     width: 100%;
     font-family: Roboto;
     font-weight: bold;
@@ -70,9 +70,11 @@ body {
     text-align: center;
     margin-top: 30px;
     padding: 10px;
+    cursor: pointer;
+    transition: background-color 0.2s;
 }
 
-.form-group button[type="button"]:hover {
+.form-group input[type="submit"]:hover {
     background-color: #4942E4;
     color: rgb(234, 234, 234);
     border: #4942E4;
