--- a/backend/calculator/templates/calculator/main.html
+++ b/backend/calculator/templates/calculator/main.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    {% load static %}
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -8,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Radio+Canada+Big:ital,wght@0,400..700;1,400..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <title>Auto Loan Calculator</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="{% static 'calculator/mainStyles.css' %}">
 </head>
 <body>
     <h1>Auto Loan Calculator</h1>
@@ -21,35 +22,49 @@
         
         <div class="input_container">
             <h2>Loan details</h2>
-            <form action="#" method="post">
+            <form method="post" action="">
+                {% csrf_token %}
                 <div class="form-group">
-                    <label for="totalPrice">Total price ($)</label>
-                    <input type="number" id="totalPrice" name="totalPrice" placeholder="25000" required>
+                    <label for="carPrice">Car price ($)</label>
+                    <input type="number" id="carPrice" name="carPrice" value="25000" required>
                 </div>
                 <div class="form-group">
                     <label for="loanDuration">Loan duration (months)</label>
-                    <input type="number" id="loanDuration" name="loanDuration" placeholder="36" required>
+                    <input type="number" id="loanDuration" name="loanDuration" value="36" required>
                 </div>
                 <div class="form-group">
                     <label for="interest">Interest rate (%)</label>
-                    <input type="number" step="0.1" id="interest" name="interest" placeholder="4.5" required>
+                    <input type="number" step="0.1" id="interest" name="interest" value="4.5" required>
                 </div>
                 <div class="form-group">
                     <label for="downPayment">Down payment ($)</label>
-                    <input type="number" id="downPayment" name="downPayment" placeholder="0">
+                    <input type="number" id="downPayment" name="downPayment" value="0">
                 </div>
                 <div class="form-group">
-                    <button type="button">Calculate</button>
+<!--                    <button type="button">Calculate</button>-->
+                    <input type="submit" value="Calculate">
                 </div>
             </form>
         </div>
     
         <div class="output_container">
-            <h2>Monthly payments</h2>
-            <h4>Down payment: </h4>
-            <h4>Loaned amount: </h4>
-            <h4>Total interest amount: </h4>
-            <h4>Total paid amount: </h4>
+            <h2>Monthly payment: ${{ monthly_payment }}</h2>
+
+            {% if down_payment %}
+            <h4>Down payment: ${{ down_payment }} </h4>
+            {% endif %}
+
+            {% if loaned_amount %}
+            <h4>Loaned amount: ${{ loaned_amount }}</h4>
+            {% endif %}
+
+            {% if total_interest_amount %}
+            <h4>Total interest amount: ${{ total_interest_amount }} </h4>
+            {% endif %}
+
+            {% if total_price_amount %}
+            <h4>Total price amount: ${{ total_price_amount }} </h4>
+            {% endif %}
         </div>
     </div>
 
