--- a/backend/calculator/static/calculator/mainStyles.css
+++ b/backend/calculator/static/calculator/mainStyles.css
@@ -84,6 +84,7 @@ body {
 }
 
 .output_container {
+    font-family: Roboto, Arial, Helvetica, sans-serif;
     flex: 5;
     border-radius: 12px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
