--- a/backend/calculator/static/calculator/css/mainStyles.css
+++ b/backend/calculator/static/calculator/css/mainStyles.css
@@ -1,26 +1,25 @@
 h1 {
     font-family: Roboto, Arial, Helvetica, sans-serif;
     color:blue;
-    padding: 8px;
     font-size: 2.5em;
 }
 
-h2 {
+h2, h3 {
     font-family: Roboto, Arial, Helvetica, sans-serif;
 }
 
 p1 {
     font-family: Roboto, Arial, Helvetica, sans-serif;
-    padding: 8px;
 }
 
 body {
     background-color: white;
     /*margin-left: 150px;
     margin-right: 150px;*/
-    width: 76%;
-    margin-left: 12%;
-    margin-right: 12%;
+    width: 66%;
+    margin-left: 17%;
+    margin-right: 17%;
+    margin-bottom: 40px;
 }
 
 .calculation_container {
@@ -34,8 +33,8 @@ body {
     border-radius: 12px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     margin-top: 40px;
-    margin-bottom: 40px;
-    padding: 10px 30px;
+    margin-bottom: 60px;
+    padding: 10px 25px;
     /* width: 300px; */
 }
 
@@ -48,18 +47,20 @@ body {
     margin-bottom: 20px;
 }
 
-.form-group label {
+.form-group label, p {
     font-family: Roboto;
     display: block;
     font-weight: bold;
     margin-bottom: 8px;
 }
 
-.form-group input[type="number"]{
-    width: 95%;
+.form-group input[type="number"],
+input[type="text"]{
+    width: 100%;
     padding: 8px;
     border: 1px solid #ccc;
     border-radius: 4px;
+    box-sizing: border-box;
 }
 
 .form-group input[type="submit"] {
@@ -84,30 +85,67 @@ body {
     border: #4942E4;
 }
 
+.radio-buttons {
+    display: flex;
+    align-items: center;
+}
+
+.radio-buttons label {
+    margin-right: 10px;
+    font-weight: normal;
+}
+
+/* Style the form sections */
+.form-section {
+    display: none;
+    opacity: 0;
+    overflow: auto;
+    transition: opacity 0.5s ease, height 0.5s ease;
+}
+
+.form-section.active {
+    display: block;
+    opacity: 1;
+    height: auto;
+}
+
+/* Style the navigation links */
+.nav-link {
+    font-family: Roboto, Arial, Helvetica, sans-serif;
+    color: #007BFF;
+    cursor: pointer;
+    text-decoration: none;
+    padding: 0 10px;
+}
+
+.nav-link:hover {
+    text-decoration: underline;
+}
+
 .output_container {
     font-family: Roboto, Arial, Helvetica, sans-serif;
     flex: 5;
     border-radius: 22px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     margin-top: 40px;
-    margin-bottom: 40px;
+    margin-bottom: 60px;
     padding: 10px 30px;
 }
 
 .principal_plot {
     margin: auto;
-    width: 80%;
+    width: 90%;
     margin-top: 40px;
-    margin-bottom: 40px;
+    margin-bottom: 60px;
 }
 
 .amortization_table table{
     font-family: Roboto, Arial, Helvetica, sans-serif;
     margin: auto;
-    width: 80%;
+    width: 90%;
     border-collapse: collapse;
     margin-top: 40px;
-    margin-bottom: 40px;
+    margin-bottom: 60px;
 }
 
 .amortization_table th, td{
@@ -119,6 +157,6 @@ body {
 tr:nth-child(even){background-color: #f2f2f2}
 
 .amortization_table th {
-  background-color: #4942E4;
-  color: white;
+    background-color: #4942E4;
+    color: white;
 }
