--- a/backend/calculator/templates/calculator/main.html
+++ b/backend/calculator/templates/calculator/main.html
@@ -1,7 +1,8 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    {% load static %}
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -10,8 +11,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Radio+Canada+Big:ital,wght@0,400..700;1,400..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <title>Auto Loan Calculator</title>
-    <link rel="stylesheet" href="{% static 'calculator/mainStyles.css' %}">
-    <script src="{% static 'calculator/charts.js' %}"></script>
+    <link rel="stylesheet" href="{% static 'calculator/css/mainStyles.css' %}">
+    <script src="{% static 'calculator/js/charts.js' %}"></script>
 </head>
 <body>
     <h1>Auto Loan Calculator</h1>
@@ -26,27 +27,55 @@
             <h2>Loan details</h2>
             <form method="post" action="">
                 {% csrf_token %}
-                <div class="form-group">
-                    <label for="car_price">Car price ($)</label>
-                    <input type="number" id="car_price" name="car_price" value="{{ car_price }}" required>
+                <div class="form-section" id="standard_section">
+                    <div class="form-group">
+                        <label for="car_price">Car price ($)</label>
+                        <input type="number" id="car_price" name="car_price" value="{{ car_price }}" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="loan_duration">Loan duration (months)</label>
+                        <input type="number" id="loan_duration" name="loan_duration" value="{{ loan_duration }}" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="interest">Interest rate (%)</label>
+                        <input type="number" step="0.01" id="interest" name="interest" value="{{ interest }}" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="down_payment">Down payment ($)</label>
+                        <input type="number" id="down_payment" name="down_payment" value="{{ down_payment }}">
+                    </div>
+                    <div class="form-group">
+                        <label for="start_date">Start date</label>
+                        <input type="text" id="start_date" name="start_date">
+                    </div>
+                    <br>
+                    <a href="#" class="nav-link" onclick="navigateSection(event, 'advanced_section')">Advanced option</a>
                 </div>
-                <div class="form-group">
-                    <label for="loan_duration">Loan duration (months)</label>
-                    <input type="number" id="loan_duration" name="loan_duration" value="{{ loan_duration }}" required>
-                </div>
-                <div class="form-group">
-                    <label for="interest">Interest rate (%)</label>
-                    <input type="number" step="0.1" id="interest" name="interest" value="{{ interest }}" required>
-                </div>
-                <div class="form-group">
-                    <label for="down_payment">Down payment ($)</label>
-                    <input type="number" id="down_payment" name="down_payment" value="{{ down_payment }}">
+                <div class="form-section" id="advanced_section">
+                    <div class="form-group">
+                        <label for="advanced_payment">Advanced payment ($)</label>
+                        <input type="number" id="advanced_payment" name="advanced_payment" value=0>
+                    </div>
+                    <div class="form-group">
+                        <p>Refinance option</p>
+                        <div class="radio-buttons">
+                            <label>
+                                <input type="radio" name="refinance_button" value="yes"> Yes
+                            </label>
+                            <label>
+                                <input type="radio" name="refinance_button" value="no" checked> No
+                            </label>
+                        </div>
+                    </div>
+                    <br>
+                    <a href="#" class="nav-link" onclick="navigateSection(event, 'standard_section')">Back</a>
                 </div>
                 <div class="form-group">
                     <input type="submit" value="Calculate">
                 </div>
             </form>
         </div>
+        <script src="{% static 'calculator/js/advanced_inputs.js' %}"></script>
     
         <div class="output_container">
             <h2>Monthly payment: ${{ monthly_payment|floatformat:2 }}</h2>
@@ -131,5 +160,21 @@
             }
         });
     </script>
+
+    <h2>Monthly Payment Calculation</h2>
+    <p1>
+        Explain the monthly payment formula habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.
+    </p1>
+    <br>
+    <h2>Car Devaluation</h2>
+    <p1>
+        About car devaluation habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.
+    </p1>
+    <br>
+    <h2>About</h2>
+    <p1>
+        General info tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.
+    </p1>
+
 </body>
 </html>
