--- a/backend/calculator/static/calculator/css/mainStyles.css
+++ b/backend/calculator/static/calculator/css/mainStyles.css
@@ -136,11 +136,21 @@ input[type="text"]{
     padding: 10px 30px;
 }
 
+.interestDoughnutChart {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 300px;
+    margin-top: 40px;
+    margin-bottom: 60px;
+}
+
 .principal_plot {
     margin: auto;
     width: 90%;
     margin-top: 40px;
     margin-bottom: 60px;
+    justify-content: center;
 }
 
 .amortization_table table{
