--- a/calculator/static/calculator/css/mainStyles.css
+++ b/calculator/static/calculator/css/mainStyles.css
@@ -17,8 +17,8 @@ body {
     /*margin-left: 150px;
     margin-right: 150px;*/
     width: 66%;
-    margin-left: 22%;
-    margin-right: 12%;
+    margin-left: 21%;
+    margin-right: 13%;
     margin-bottom: 40px;
 }
 
@@ -186,6 +186,7 @@ tr:nth-child(even){background-color: #f2f2f2}
     background-color: #F5F7F8;
     padding: 15px;
     height: 100vh; /* Full height */
+    overflow-y: auto;
     position: fixed; /* Fix the sidebar to the left */
     left: 0;
     top: 0;
